commit Html changes
Final changes for Events
