# src/app/services/Salim/services/authentification-controller.service.ts
@@ -10,8 +10,8 @@ import { ApiConfiguration } from '../api-configuration';
 import { StrictHttpResponse } from '../strict-http-response';
 
 import { AuthentificationResponse } from '../models/authentification-response';
-import { createAuthentificationToken } from '../fn/authentification-controller/create-authentification-token';
-import { CreateAuthentificationToken$Params } from '../fn/authentification-controller/create-authentification-token';
+import { createAuthentificationToken1 } from '../fn/authentification-controller/create-authentification-token-1';
+import { CreateAuthentificationToken1$Params } from '../fn/authentification-controller/create-authentification-token-1';
 
 @Injectable({ providedIn: 'root' })
 export class AuthentificationControllerService extends BaseService {
@@ -19,27 +19,27 @@ export class AuthentificationControllerService extends BaseService {
     super(config, http);
   }
 
-  /** Path part for operation `createAuthentificationToken()` */
-  static readonly CreateAuthentificationTokenPath = '/authentication';
+  /** Path part for operation `createAuthentificationToken1()` */
+  static readonly CreateAuthentificationToken1Path = '/authentication';
 
   /**
    * This method provides access to the full `HttpResponse`, allowing access to response headers.
-   * To access only the response body, use `createAuthentificationToken()` instead.
+   * To access only the response body, use `createAuthentificationToken1()` instead.
    *
    * This method sends `application/json` and handles request body of type `application/json`.
    */
-  createAuthentificationToken$Response(params: CreateAuthentificationToken$Params, context?: HttpContext): Observable<StrictHttpResponse<AuthentificationResponse>> {
-    return createAuthentificationToken(this.http, this.rootUrl, params, context);
+  createAuthentificationToken1$Response(params: CreateAuthentificationToken1$Params, context?: HttpContext): Observable<StrictHttpResponse<AuthentificationResponse>> {
+    return createAuthentificationToken1(this.http, this.rootUrl, params, context);
   }
 
   /**
    * This method provides access only to the response body.
-   * To access the full response (for headers, for example), `createAuthentificationToken$Response()` instead.
+   * To access the full response (for headers, for example), `createAuthentificationToken1$Response()` instead.
    *
    * This method sends `application/json` and handles request body of type `application/json`.
    */
-  createAuthentificationToken(params: CreateAuthentificationToken$Params, context?: HttpContext): Observable<AuthentificationResponse> {
-    return this.createAuthentificationToken$Response(params, context).pipe(
+  createAuthentificationToken1(params: CreateAuthentificationToken1$Params, context?: HttpContext): Observable<AuthentificationResponse> {
+    return this.createAuthentificationToken1$Response(params, context).pipe(
       map((r: StrictHttpResponse<AuthentificationResponse>): AuthentificationResponse => r.body)
     );
   }
